5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1643_1053.log
== TEST (2019-04-08 19:32:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome = cervo):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 5
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:39:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == cervo):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:40:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:40:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.195852
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:40:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:41:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = "nome" "nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:42:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = "nome"" " "nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:43:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome " "nao eh patrono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 8
    mensagem = nome " "nao eh patrono do Harry Potter"
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:44:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome "nao eh patrono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 8
    mensagem = nome "nao eh patrono do Harry Potter"
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:46:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else (nome != "cervo"):
	mensagem = nome "nao eh patrono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 7
    else (nome != "cervo"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:47:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else (nome != "cervo"):
	mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.185983
-- ERROR:
  File "/home/codebench/codes/1643/1053/main.py", line 7
    else (nome != "cervo"):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:47:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else (nome != "cervo"):
	mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 7
    else (nome != "cervo"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:47:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else (nome != "cervo"):
	mensagem = "nao eh patrono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 7
    else (nome != "cervo"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:07:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + "nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:08:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 11:08:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.150114
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:08:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:09:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 11:09:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else:
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.137732
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 11:10:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.215995
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 11:11:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.208954
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:12:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:43:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 11:43:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 11:45:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.201601
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:23:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:23:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.163803
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:29:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem =nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.151275
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:29:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh o patrono do Harry Potter"
else :
	mensagem =nome + " nao eh patrono do Harry Potter "
print(mensagem)

-- EXECUTION TIME:
0.171435
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:30:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("escreva o nome do patrono: ")
if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else :
	mensagem = nome + " nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.151081
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
